# test_noise

./: .gitignore  README.md  make_pair.py  pyproject.toml  table.csv  test.py  test_img.py
data/: sample_dem.tif  sample_rgb.tif  srtm_bbox.tif
metadata_sample/: 6. KOMPSAT 3A 메타정보.xml
test_noise/: check_sensitivity.py  compare_origin_similarity.py  make_noise_raw.py  utils.py
test_noise/config/: KOMPSAT.yaml
test_noise/denoise/: README.md  __init__.py  base.py  denoise.py  denoiseAtmospheric.py  denoiseMissingLine.py  denoiseRandom.py  denoiseStripe.py  denoiseSunAngle.py  denoiseTerrain.py  denoiseVignetting.py
test_noise/noiseEval/: README.md  __init__.py  evaluator.py  metric.py  param_finder.py
test_noise/noiseGenerator/: README.md  __init__.py  atmospheric_noise.py  base.py  gaussian_noise.py  generator.py  missing_line_noise.py  terrain_noise.py  vignetting_noise.py
test_noise/noise_eval/: __init__.py  evaluator.py  metric.py  param_finder.py
test_noise/noise_generator/: __init__.py  atmospheric_noise.py  base.py  gaussian_noise.py  missing_line.py  missing_line_noise.py  poisson_noise.py  salt_pepper_noise.py  striping_noise.py  sun_angle_noise.py  terrain_noise.py  utils.py  vignetting_noise.py
