[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "test_noise"
version = "0.0.1"
authors = [
  { name="Seo Woung Yoon", email="yunsw62@gmail.com" },
]
description = "A project to generate and denoise images."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "opencv-python",
    "py6s",
    "pysolar",
    "python-dateutil",
    "pytz",
    "PyYAML",
    "scipy",
    "six",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
